# social-auth

./: .env.example  .gitignore  main.py  pyproject.toml  run.sh
authenticator/: Authenticator.py
config/: Config.py
datastore/: MongoDataStore.py
exceptions/: AuthError.py  DataError.py  ProviderValidationError.py  TokenStoreError.py  __init__.py
logger/: Logger.py
social_media_adapter_functions/: __init__.py  facebook_validator.py  twitter_validator.py
token_store/: TokenStore.py
utils/: http_client.py  util.py
